--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,98 @@
 version: '3'
 services:
   xnat-web:
-     build:
-       context: ./tomcat
-       args:
-         LOCALE: $LOCALE
-     ports:
-       - "8081:8080"
-       - "8104:8104"
-     volumes:
-       - ./webapps:/usr/local/tomcat/webapps
-       - ./plugins:/data/xnat/home/plugins
-       - ./logs/xnat:/data/xnat/home/logs
-       - ./logs/tomcat:/opt/tomcat/logs
-       - ./tomcat/server.xml:/opt/tomcat/conf/server.xml
-       - ./tomcat/tomcat-users.xml:/opt/tomcat/conf/tomcat-users.xml
-       - ./tomcat/xnat-conf.properties:/data/xnat/home/config/xnat-conf.properties
-       # Pass docker socket for XNAT container service
-       - /var/run/docker.sock:/var/run/docker.sock
-     expose:
-       - "8080"
-     depends_on:
-       - xnat-db
-     environment:
-       - JAVA_OPTS=-Xms16g -Xmx40g -Dxnat.home=/data/xnat/home -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
-       - XNAT_HOME=/data/xnat/home
-       - TZ=$TIMEZONE
+    build:
+      context: ./tomcat
+      args:
+        LOCALE: $LOCALE
+        XNAT_ROOT: ${XNAT_ROOT}
+        XNAT_HOME: ${XNAT_HOME}
+    ports:
+      - "8081:8080"
+      - "8104:8104"
+    volumes:
+      - $CINDER_DIR/plugins:${XNAT_HOME}/plugins
+      - $CINDER_DIR/auth:${XNAT_HOME}/auth
+      - $CINDER_DIR/logs/xnat:${XNAT_HOME}/logs
+      - $DATA_DIR/archive:${XNAT_ROOT}archive
+      - $CINDER_DIR/build:${XNAT_ROOT}build
+      - $DATA_DIR/cache:${XNAT_ROOT}/cache
+      - $DATA_DIR/ftp:${XNAT_ROOT}/ftp
+      - $CINDER_DIR/pipeline:${XNAT_ROOT}/pipeline
+      - $DATA_DIR/prearchive:${XNAT_ROOT}prearchive
+      - $CINDER_DIR/webapps:/usr/local/tomcat/webapps
+      - $CINDER_DIR/logs/tomcat:/opt/tomcat/logs
+      - ./tomcat/server.xml:/opt/tomcat/conf/server.xml
+      - ./tomcat/tomcat-users.xml:/opt/tomcat/conf/tomcat-users.xml
+      - ./tomcat/xnat-conf.properties:${XNAT_HOME}/config/xnat-conf.properties
+      - /var/run/docker.sock:/var/run/docker.sock
+    expose:
+      - "8080"
+    depends_on:
+      - xnat-db
+    environment:
+      - CATALINA_OPTS=-Xms128m -Xmx4096m -Dxnat.home=/data/xnat/home -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
+      - XNAT_HOME=/data/xnat/home
+      - TZ=$TIMEZONE
+    restart: always
+
   xnat-db:
-     build: ./postgres
-     expose:
-       - "5432"
-     volumes:
-       - ./postgres-data:/var/lib/postgresql/data
-     environment:
-       - TZ=$TIMEZONE
+    build: ./postgres
+    expose:
+      - "5432"
+    volumes:
+      - $CINDER_DIR/postgres:/var/lib/postgresql/data
+      - /mnt/cinder/db_backups/xnat-backup-before-upgrade.out:/xnat-backup.out
+    environment:
+      - TZ=$TIMEZONE
+      - POSTGRES_PASSWORD=password
+
   xnat-backup:
-     build: ./backup
-     depends_on:
-       - xnat-db
-     links:
-       - xnat-db
-     environment:
-       SETUP_CRON: "0 3 * * *"
-     volumes:
-       - ./backups:/backups
+    build: ./backup
+    depends_on:
+      - xnat-db
+    links:
+      - xnat-db
+    environment:
+      SETUP_CRON: "0 3 * * *"
+    volumes:
+      - $BACKUP_DIR:/backups
+
   xnat-nginx:
-     build: ./nginx
-     ports:
+    build: ./nginx
+    ports:
       - "80:80"
       - "443:443"
-     expose:
+    expose:
       - "80"
-     links:
-       - xnat-web
-     environment:
-       - TZ=$TIMEZONE
+    links:
+      - xnat-web
+    environment:
+      - TZ=$TIMEZONE
+
   prometheus:
-     image: prom/prometheus
-     volumes:
-       - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
-     command:
-       - '--config.file=/etc/prometheus/prometheus.yaml'
-     ports:
-       - '9090:9090'
-     links:
-       - cadvisor
-     environment:
-       - TZ=$TIMEZONE
+    image: prom/prometheus
+    volumes:
+      - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yaml'
+    ports:
+      - '9090:9090'
+    links:
+      - cadvisor
+    environment:
+      - TZ=$TIMEZONE
+
   cadvisor:
-     image: google/cadvisor
-     volumes:
-       - /:/rootfs:ro
-       - /var/run:/var/run:rw
-       - /sys:/sys:ro
-       - /var/lib/docker/:/var/lib/docker:ro
-     ports:
-       - "8082:8080"
-     expose:
-       - 8082
-     environment:
-       - TZ=$TIMEZONE
+    image: google/cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    ports:
+      - "8082:8080"
+    expose:
+      - 8082
+    environment:
+      - TZ=$TIMEZONE
