updated the docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,11 @@ services:
       - xnat-web
     environment:
       - TZ=$TIMEZONE
+    volumes:
+      - ./nginx/certs/cert.crt:/etc/nginx/certs/cert.crt
+      - ./nginx/certs/key.key:/etc/nginx/certs/key.key
+      - ./nginx/nginx-ssl.conf:/etc/nginx/nginx.conf
+
 
   prometheus:
     image: prom/prometheus
