--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -42,20 +42,15 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name xnat.monash.edu;
-        if ($host != "xnat.monash.edu") {
-        return 444;
-        }
+        server_name xnat-test.erc.monash.edu;
         return 301 https://$server_name$request_uri;
     }
     server {
         # see https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/
         # to see why we hardwire the IP address
         listen 443 ssl;
-        server_name xnat.monash.edu;
-        if ($host != "xnat.monash.edu") {
-            return 444;
-        }
+        server_name xnat-test.erc.monash.edu;
+
         ssl on;
         ssl_protocols TLSv1.2;
         ssl_prefer_server_ciphers on;
@@ -65,7 +60,7 @@ http {
         ssl_certificate /etc/nginx/certs/cert.crt;
         ssl_certificate_key /etc/nginx/certs/key.key;
 
-        root /var/lib/tomcat7/webapps/ROOT;
+        root /var/lib/tomcat/webapps/ROOT;
 
         location / {
             proxy_pass http://xnat-web:8080;
