--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -48,14 +48,16 @@ http {
     server {
         # see https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/
         # to see why we hardwire the IP address
-        listen 443 ssl;
+        listen 443 http2 ssl;
+        listen [::]:443 http2 ssl;
         server_name xnat-test.erc.monash.edu;
 
-        ssl on;
-        ssl_protocols TLSv1.2;
+        ssl_protocols  TLSv1.2;
         ssl_prefer_server_ciphers on;
-        ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384";
-
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains";
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
 
         ssl_certificate /etc/nginx/certs/cert.crt;
         ssl_certificate_key /etc/nginx/certs/key.key;
