--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -42,7 +42,7 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name xnat-test.erc.monash.edu;
+        server_name xnat.monash.edu;
         return 301 https://$server_name$request_uri;
     }
     server {
@@ -50,7 +50,7 @@ http {
         # to see why we hardwire the IP address
         listen 443 http2 ssl;
         listen [::]:443 http2 ssl;
-        server_name xnat-test.erc.monash.edu;
+        server_name xnat.monash.edu;
 
         ssl_protocols  TLSv1.2;
         ssl_prefer_server_ciphers on;
